--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "near-orm",
   "description": "",
   "version": "0.0.0",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
