--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@biomejs/biome": "^1.9.3",
     "@types/node": "^22.7.4",
     "@vitest/coverage-v8": "^2.1.2",
+    "fake-indexeddb": "^6.0.0",
     "pkg-pr-new": "^0.0.29",
     "typescript": "^5.6.2",
     "vitest": "^2.1.2"
