--- a/biome.jsonc
+++ b/biome.jsonc
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": []
+		"ignore": ["test/**/*.ts", "node_modules", "orm.js", "orm.d.ts"]
 	},
 	"formatter": {
 		"enabled": true,
